# velinscript

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INSTALL_RUST.md  LICENSE  QUICK_START.md  README.md  SECURITY.md  VELINSCRIPT_BEFEHLE.md  install.ps1  install.sh  integration_test.velin  mega_integration_test.velin  prepare-git-upload.ps1  run_all_tool_tests.ps1  setup-openssl-windows.ps1  setup-windows-dev.ps1  test-library-config.yaml
.github/: description.txt  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: autonomous-features-test.yml  ci.yml  dead-code-check.yml  release.yml  wiki.yml
compiler/: Cargo.toml
compiler/.velin/: profiling.json
compiler/src/: cli.rs  error.rs  lib.rs  main.rs
compiler/src/analysis/: insight.rs  mod.rs
compiler/src/autofix/: mod.rs  report.rs
compiler/src/borrow/: checker.rs  lifetime.rs  mod.rs  ownership.rs
compiler/src/codegen/: autodoc.rs  autotest.rs  boilerplate.rs  client.rs  csharp.rs  distributed.rs  framework.rs  go.rs  infrastructure.rs  ir_codegen.rs  java.rs  javascript.rs  mod.rs  openapi.rs  php.rs  python.rs  rust.rs  system_generator.rs  traits.rs  typescript.rs
compiler/src/codegen/templates/: ai_client.rs  api_server.rs  auth.rs  deployment.rs  mod.rs  rate_limit.rs
compiler/src/compiler/: config.rs  context.rs  error.rs  language.rs  mod.rs  orchestrator.rs  pass.rs
compiler/src/error/: suggestions.rs
compiler/src/formatter/: config.rs  formatter.rs  mod.rs
compiler/src/ir/: builder.rs  ir.rs  mod.rs  optimizer.rs  validator.rs
compiler/src/optimizer/: learning.rs  mod.rs  parallelization.rs  pipeline.rs  profiling.rs
compiler/src/parser/: ast.rs  lexer.rs  parser.rs
compiler/src/passes/: ai_bug_detection.rs  ai_code_review.rs  ai_codegen.rs  ai_optimization.rs  ai_sandbox.rs  ai_semantic.rs  autofix.rs  code_order.rs  codegen.rs  desugar.rs  mod.rs  parser.rs  type_check.rs
compiler/src/prompt/: mod.rs  optimizer.rs  sanitizer.rs
compiler/src/stdlib/: actix.rs  agent.rs  alerting.rs  api.rs  async_ops.rs  audit.rs  auth.rs  axum.rs  backup.rs  cache.rs  collections.rs  config.rs  crypto.rs  csv.rs  database.rs  date.rs  datetime.rs  embedding.rs  encoding.rs  encryption.rs  env.rs  event_bus.rs  extensions.rs  fileio.rs  fixtures.rs  flow.rs  fs.rs  http.rs  http_client.rs  iterators.rs  json.rs  llm.rs  log.rs  logging.rs  math.rs  metrics.rs  ml.rs  mocks.rs  mod.rs  mongodb.rs  (+31 more)
compiler/src/type_checker/: checker.rs  environment.rs  errors.rs  mod.rs
docs/: DOKUMENTATIONS-INDEX.md  README.md  system-diagnose.md  wann-nutze-ich-was.md
docs/api/: decorators.md  frameworks.md  openapi.md  standard-library.md  test_module.md
docs/architecture/: ai-compiler-passes.md  borrow-checker.md  code-generation.md  code-ordering-pass.md  code-ordering.md  compiler-architecture.md  desugaring-pass.md  error-handling.md  framework-integration.md  ir-representation.md  module-resolution.md  multi-target-compilation.md  parallelization.md  parser-pass.md  pass-dokumentation-mapping.md  pass-verlauf.md  passes-uebersicht.md  prompt-optimizer.md  system-generation.md  type-inference.md
docs/examples/: 08-ai-smart-home.md  multi-target-examples.md
docs/guides/: advanced.md  ai-ml.md  (+28 more)
examples/: README.md  advanced-apis.md  advanced-apis.velin  api-with-validation.velin  calculator-api.velin  codegen_example.velin  complete-api-with-auth.velin  debugger-example.velin  full-api-example.velin  global_map_test.velin  hello.velin  llm-chat-api.velin  ml-sentiment-analysis.velin  ml-training-example.velin  oauth2-api.velin  privacy-compliant.velin  seaorm-crud.velin  security_example.velin  string-interpolation-example.velin  structs_and_fn.velin  structs_only.velin  testing_example.velin  type_check_test.velin  vault-secrets.velin  vector-search-api.velin
scripts/: generate-wiki.ps1  generate-wiki.sh
tools/api-doc-generator/: Cargo.toml  test-openapi.json
tools/api-doc-generator/src/: html.rs  jsdoc.rs  main.rs  openapi.rs
tools/benchmark-runner/: Cargo.toml
tools/benchmark-runner/src/: main.rs  parser.rs  runner.rs  stats.rs
tools/bundle-analyzer/: Cargo.toml
tools/bundle-analyzer/src/: analyzer.rs  main.rs  report.rs  tree_shaking.rs
tools/debugger/: Cargo.toml
tools/debugger/src/: breakpoints.rs  dap_server.rs  debugger.rs  main.rs  stack.rs  variables.rs
tools/dependency-graph/: Cargo.toml
tools/dependency-graph/src/: analyzer.rs  graph.rs  main.rs  visualizer.rs
tools/hot-reload/: Cargo.toml
tools/hot-reload/src/: main.rs  reloader.rs  watcher.rs
tools/library-generator/: Cargo.toml  README.md
tools/library-generator/compiler/src/stdlib/: test_example.rs
tools/library-generator/src/: config.rs  generator.rs  integration.rs  lib.rs  main.rs  templates.rs
tools/library-generator/src/integration/: codegen.rs  mod_rs.rs  type_checker.rs
tools/library-generator/src/templates/: docs.md.template  service_based.rs.template  simple_functions.rs.template  struct_based.rs.template  test.rs.template
tools/lsp/: Cargo.toml  README.md
tools/lsp/src/: document.rs  main.rs  server.rs
tools/lsp/src/handlers/: code_actions.rs  completion.rs  definition.rs  formatting.rs  hover.rs  imports.rs  mod.rs  references.rs  rename.rs
tools/package-manager/: Cargo.toml  README.md
tools/package-manager/src/: install.rs  lockfile.rs  main.rs  mod.rs  registry.rs  resolver.rs  updater.rs
tools/parser-debug/: Cargo.toml
tools/parser-debug/src/: main.rs
tools/profiler/: Cargo.toml
tools/profiler/src/: cpu.rs  flamegraph.rs  main.rs  memory.rs
tools/repl/: Cargo.toml
tools/repl/src/: compiler.rs  evaluator.rs  interpreter.rs  main.rs
tools/runtime-inspector/: Cargo.toml
tools/runtime-inspector/src/: inspector.rs  main.rs  memory.rs  variables.rs
tools/security-scanner/: Cargo.toml
tools/security-scanner/src/: analyzer.rs  main.rs  mod.rs  rules.rs
tools/test-runner/: Cargo.toml
tools/test-runner/src/: assertions.rs  coverage.rs  main.rs  mocking.rs  parser.rs  runner.rs
(+156 files in other folders)
