[package]
name = "velin-api-doc"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "velin-api-doc"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
velin-compiler = { path = "../../compiler" }
