[package]
name = "velin-benchmark-runner"
version = "0.1.0"
edition = "2021"
description = "VelinScript Benchmark Runner - Performance-Benchmarks mit statistischer Auswertung"

[[bin]]
name = "velin-bench"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
velin-compiler = { path = "../../compiler" }
walkdir = "2.0"
criterion = "0.5"
statistical = "1.0"
