[package]
name = "velin-bundle-analyzer"
version = "0.1.0"
edition = "2021"
description = "VelinScript Bundle Analyzer - Analysiert Bundle-Größe und Tree-Shaking-Potenzial"

[[bin]]
name = "velin-bundle"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
velin-compiler = { path = "../../compiler" }
walkdir = "2.0"
regex = "1.10"
