[package]
name = "velin-debugger"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "velin-debugger"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
velin-compiler = { path = "../../compiler" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
