[package]
name = "velin-dependency-graph"
version = "0.1.0"
edition = "2021"
description = "VelinScript Dependency Graph - Visualisiert Modul-Abhängigkeiten"

[[bin]]
name = "velin-deps"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
velin-compiler = { path = "../../compiler" }
walkdir = "2.0"
petgraph = "0.6"
indexmap = "2.0"
