[package]
name = "velin-hot-reload"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "velin-hot-reload"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
notify = "6.0"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.0"
