[package]
name = "velin-library-generator"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "velin-library-generator"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
dialoguer = "0.11"
regex = "1.10"
heck = "0.5"  # Für Case-Konvertierung (snake_case, PascalCase)

[dev-dependencies]
tempfile = "3.10"