[package]
name = "velin-lsp"
version = "0.1.0"
edition = "2021"

[dependencies]
tower-lsp = "0.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
velin-compiler = { path = "../../compiler" }

[[bin]]
name = "velin-lsp"
path = "src/main.rs"

