[package]
name = "parser-debug"
version = "0.1.0"
edition = "2021"

[dependencies]
velin-compiler = { path = "../../compiler" }
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bin]]
name = "parser-debug"
path = "src/main.rs"
