[package]
name = "velin-runtime-inspector"
version = "0.1.0"
edition = "2021"
description = "VelinScript Runtime Inspector - Live-Inspection von Variablen, State und Memory"

[[bin]]
name = "velin-inspect"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
velin-compiler = { path = "../../compiler" }
tokio = { version = "1.0", features = ["full"] }
