[package]
name = "velin-test-runner"
version = "0.1.0"
edition = "2021"
description = "VelinScript Test Runner - Unit- und Integrationstests mit Assertions, Mocking und Coverage-Reports"

[[bin]]
name = "velin-test"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
velin-compiler = { path = "../../compiler" }
walkdir = "2.0"
tokio = { version = "1.0", features = ["full"] }
